...
                    border: Border.all(
                        width: 3, color: Theme.of(context).primaryColorDark),
                    borderRadius: BorderRadius.circular(10),
                  ),
                  child: Center(
                    child: PopupMenuButton<String>(
                      key: Key('desplegableDe'),
                      onSelected: (String value) {
                        setState(() {
                          if (appState.selectedDeValue == value) {
                            appState.selectedDeValue =
                                'De'; //Inicialmente la barra pone De
                          } else {
...
                        width: 3, color: Theme.of(context).primaryColorDark),
                    // Borde negro
                    borderRadius: BorderRadius.circular(10),
                  ),
                  child: Center(
                    child: PopupMenuButton<String>(
                      key: Key('desplegableA'),
                      onSelected: (String value) {
                        setState(() {
                          if (appState.selectedAValue.contains(value)) {
                            appState.selectedAValue.remove(value);
                          } else {
                            appState.selectedAValue.add(value);
...
              padding: EdgeInsets.all(10),
              child: TextFormField(
                controller: appState.cantidadController,
                readOnly: false,
                keyboardType: TextInputType.number,
                decoration: InputDecoration(
                  hintText: 'Ingrese una cantidad',
                  hintStyle:
                      TextStyle(color: Theme.of(context).dialogBackgroundColor),
                ),
                style:
                    TextStyle(color: Theme.of(context).dialogBackgroundColor),
              ),
...
                            actions: [
                              TextButton(
                                onPressed: () {
                                  Navigator.of(context).pop(); //Cerrar el error
                                },
                                child: Text(
                                  'OK',
                                  style: TextStyle(
                                    color: Colors.black,
                                    fontWeight: FontWeight.bold,
                                    fontSize:
                                        15.0, // Puedes ajustar el tamaño según tu preferencia
                                  ),
...
