...
class ResultScreen extends StatelessWidget {
  @override
  Widget build(BuildContext context) {
    var appState = context.watch<MyAppState>();
    return Scaffold(
      appBar: AppBar(
        title: Text('Resultados de conversion'),
        leading: IconButton(
          icon: Icon(Icons.arrow_back),
          onPressed: () {
            // Esta función se ejecuta cuando se presiona el botón de retroceso
            appState.comeBack();
            appState.changeIndex(2);
...
