...
          SizedBox(height: 80),
          Row(
            mainAxisSize: MainAxisSize.max,
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              ElevatedButton(
                key: Key('Conversor de divisas'),
                onPressed: () {
                  appState.changeIndex(2);
                },
                style: ElevatedButton.styleFrom(
                        minimumSize: Size(325, 100),
                        backgroundColor: Theme.of(context).primaryColor)
...
